@@ -259,12 +259,6 @@
 
 		}
 
-		.warning {
-			background-color:#ffe683;
-			padding:8px 12px 12px;
-			text-align:left;
-		}
-
 		button.install .icon {
 			background:url(../img/icons.png) no-repeat 0 -28px;
 		}
